docs/api/qiskit/0.24/qiskit.extensions.Snapshot.md
---
title: Snapshot
description: API reference for qiskit.extensions.Snapshot
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.Snapshot
---

<span id="qiskit-extensions-snapshot" />

# qiskit.extensions.Snapshot

<span id="qiskit.extensions.Snapshot" />

`Snapshot(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/extensions/simulator/snapshot.py "view source code")

Simulator snapshot instruction.

Create new snapshot instruction.

**Parameters**

*   **label** (*str*) – the snapshot label for result data.
*   **snapshot\_type** (*str*) – the type of the snapshot.
*   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
*   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
*   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

**Raises**

**ExtensionError** – if snapshot label is invalid.

### \_\_init\_\_

<span id="qiskit.extensions.Snapshot.__init__" />

`__init__(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)`

Create new snapshot instruction.

**Parameters**

*   **label** (*str*) – the snapshot label for result data.
*   **snapshot\_type** (*str*) – the type of the snapshot.
*   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
*   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
*   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

**Raises**

**ExtensionError** – if snapshot label is invalid.

## Methods

|                                                                                                                                         |                                                                          |
| --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
| [`__init__`](#qiskit.extensions.Snapshot.__init__ "qiskit.extensions.Snapshot.__init__")(label\[, snapshot\_type, num\_qubits, …])      | Create new snapshot instruction.                                         |
| [`add_decomposition`](#qiskit.extensions.Snapshot.add_decomposition "qiskit.extensions.Snapshot.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
| [`assemble`](#qiskit.extensions.Snapshot.assemble "qiskit.extensions.Snapshot.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
| [`broadcast_arguments`](#qiskit.extensions.Snapshot.broadcast_arguments "qiskit.extensions.Snapshot.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
| [`c_if`](#qiskit.extensions.Snapshot.c_if "qiskit.extensions.Snapshot.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
| [`copy`](#qiskit.extensions.Snapshot.copy "qiskit.extensions.Snapshot.copy")(\[name])                                                   | Copy of the instruction.                                                 |
| [`inverse`](#qiskit.extensions.Snapshot.inverse "qiskit.extensions.Snapshot.inverse")()                                                 | Special case.                                                            |
| [`is_parameterized`](#qiskit.extensions.Snapshot.is_parameterized "qiskit.extensions.Snapshot.is_parameterized")()                      | Return True .IFF.                                                        |
| [`mirror`](#qiskit.extensions.Snapshot.mirror "qiskit.extensions.Snapshot.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
| [`qasm`](#qiskit.extensions.Snapshot.qasm "qiskit.extensions.Snapshot.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
| [`repeat`](#qiskit.extensions.Snapshot.repeat "qiskit.extensions.Snapshot.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
| [`reverse_ops`](#qiskit.extensions.Snapshot.reverse_ops "qiskit.extensions.Snapshot.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
| [`validate_parameter`](#qiskit.extensions.Snapshot.validate_parameter "qiskit.extensions.Snapshot.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

## Attributes

|                                                                                                            |                                                                               |
| ---------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
| [`decompositions`](#qiskit.extensions.Snapshot.decompositions "qiskit.extensions.Snapshot.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
| [`definition`](#qiskit.extensions.Snapshot.definition "qiskit.extensions.Snapshot.definition")             | Return definition in terms of other basic gates.                              |
| [`duration`](#qiskit.extensions.Snapshot.duration "qiskit.extensions.Snapshot.duration")                   | Get the duration.                                                             |
| [`label`](#qiskit.extensions.Snapshot.label "qiskit.extensions.Snapshot.label")                            | Return snapshot label                                                         |
| [`params`](#qiskit.extensions.Snapshot.params "qiskit.extensions.Snapshot.params")                         | return instruction params.                                                    |
| [`snapshot_type`](#qiskit.extensions.Snapshot.snapshot_type "qiskit.extensions.Snapshot.snapshot_type")    | Return snapshot type                                                          |
| [`unit`](#qiskit.extensions.Snapshot.unit "qiskit.extensions.Snapshot.unit")                               | Get the time unit of duration.                                                |

### add\_decomposition

<span id="qiskit.extensions.Snapshot.add_decomposition" />

`add_decomposition(decomposition)`

Add a decomposition of the instruction to the SessionEquivalenceLibrary.

### assemble

<span id="qiskit.extensions.Snapshot.assemble" />

`assemble()`

Assemble a QasmQobjInstruction

### broadcast\_arguments

<span id="qiskit.extensions.Snapshot.broadcast_arguments" />

`broadcast_arguments(qargs, cargs)`

Validation of the arguments.

**Parameters**

*   **qargs** (*List*) – List of quantum bit arguments.
*   **cargs** (*List*) – List of classical bit arguments.

**Yields**

*Tuple(List, List)* – A tuple with single arguments.

**Raises**

**CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.

### c\_if

<span id="qiskit.extensions.Snapshot.c_if" />

`c_if(classical, val)`

Add classical condition on register classical and value val.

### copy

<span id="qiskit.extensions.Snapshot.copy" />

`copy(name=None)`

Copy of the instruction.

**Parameters**

**name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

**Returns**

**a copy of the current instruction, with the name**

updated if it was provided

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

### decompositions

<span id="qiskit.extensions.Snapshot.decompositions" />

`property decompositions`

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

### definition

<span id="qiskit.extensions.Snapshot.definition" />

`property definition`

Return definition in terms of other basic gates.

### duration

<span id="qiskit.extensions.Snapshot.duration" />

`property duration`

Get the duration.

### inverse

<span id="qiskit.extensions.Snapshot.inverse" />

`inverse()`

Special case. Return self.

### is\_parameterized

<span id="qiskit.extensions.Snapshot.is_parameterized" />

`is_parameterized()`

Return True .IFF. instruction is parameterized else False

### label

<span id="qiskit.extensions.Snapshot.label" />

`property label`

Return snapshot label

### mirror

<span id="qiskit.extensions.Snapshot.mirror" />

`mirror()`

DEPRECATED: use instruction.reverse\_ops().

**Returns**

**a new instruction with sub-instructions**

reversed.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

### params

<span id="qiskit.extensions.Snapshot.params" />

`property params`

return instruction params.

### qasm

<span id="qiskit.extensions.Snapshot.qasm" />

`qasm()`

Return a default OpenQASM string for the instruction.

Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).

### repeat

<span id="qiskit.extensions.Snapshot.repeat" />

`repeat(n)`

Creates an instruction with gate repeated n amount of times.

**Parameters**

**n** (*int*) – Number of times to repeat the instruction

**Returns**

Containing the definition.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

**Raises**

**CircuitError** – If n \< 1.

### reverse\_ops

<span id="qiskit.extensions.Snapshot.reverse_ops" />

`reverse_ops()`

For a composite instruction, reverse the order of sub-instructions.

This is done by recursively reversing all sub-instructions. It does not invert any gate.

**Returns**

**a new instruction with**

sub-instructions reversed.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

### snapshot\_type

<span id="qiskit.extensions.Snapshot.snapshot_type" />

`property snapshot_type`

Return snapshot type

### unit

<span id="qiskit.extensions.Snapshot.unit" />

`property unit`

Get the time unit of duration.

### validate\_parameter

<span id="qiskit.extensions.Snapshot.validate_parameter" />

`validate_parameter(parameter)`

Instruction parameters has no validation or normalization.

